--- a/public/css/Portfolio/css/style.css
+++ b/public/css/Portfolio/css/style.css
@@ -88,7 +88,7 @@ Responsive media queries
 .navbar-border{
 }
 .banner-text{
-	border-left: 5px solid #BE2525;
+	border-left: 5px solid #01b1d7;
 	padding: 15px 40px;
 	color: #fff;
 	margin-top: 170px;
@@ -293,8 +293,11 @@ footer {
 	margin: 0;
 }
 .social-list li a{
-		font-size: 28px;
+		font-size: 40px;
 		margin-right: 15px;
+}
+.social-list li a:hover{
+		color: #01b1d7;
 }
 .type-underline, .type-underline:hover{
 	color: #767676; 
@@ -469,4 +472,19 @@ Responsive media queries
 }
 #get-touch .content {
     margin-top: 50px;
+}
+
+#main-portfolio{
+    margin-top: 100px;
+    text-align: center;
+}
+
+#main-portfolio h1{
+    font-family: 'Josefin Sans', sans-serif;
+    margin-bottom: 50px;
+}
+.home h1{
+    text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
+    margin-bottom: 50px;
 }
