Updated home page

--- a/public/css/Portfolio/css/style.css
+++ b/public/css/Portfolio/css/style.css
@@ -500,3 +500,39 @@ Responsive media queries
 strong{
     color: white;
 }
+#about{
+    padding-bottom: 30px;
+}
+#about h1, h3{
+    text-align: center;
+}
+.about-description{
+    text-align: center;
+}
+.about-card:before{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+  
+    outline: #fcfcfc solid 1px;
+    -webkit-transition: all .4s ease;
+    transition: all .4s ease;
+    opacity: 1;
+    z-index: 2;
+}
+.about-card{
+    display: block;
+      margin-top: 20px;
+    height: 250px;
+}
+.card-icon{
+        position: relative;
+    color: #234;
+    z-index: 5;
+}
+#about .fa-4x {
+    padding-top: 10px;
+}
