--- a/public/css/MyBiz/style.css
+++ b/public/css/MyBiz/style.css
@@ -1323,3 +1323,16 @@ textarea:focus {
 }
 
 
+.video-layout{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.video{
+  text-align: center;
+}
+.top-nav-1 img{
+	vertical-align: middle;
+	width: 100%;
+	height: auto;
+}
