--- a/public/css/Portfolio/css/style.css
+++ b/public/css/Portfolio/css/style.css
@@ -42,10 +42,13 @@ Responsive media queries
 ************************************
 ***********************************/
 .header {
-    background: url('/img/portfolio/Home.jpg') no-repeat fixed;
+    /*background: url('/img/portfolio/Home.jpg') no-repeat fixed;*/
+    background-color: black;
     background-size: cover;
     min-height: 630px;
     position: relative;
+    width: 100%;
+    height: 100vh;
 }
 .navbar-default {
     background-color: rgba(0,0,0,0.2);
@@ -96,7 +99,16 @@ Responsive media queries
 	color: #fff;
 	margin-top: 170px;
 }
-.banner-text h2, .banner-text p{
+.banner-text h2{
+    color: #a71d5d;
+    text-align: center;
+	font-size: 90px;
+	font-weight: 400;
+	font-family: 'Questrial', sans-serif;
+}
+.banner-text p{
+    color: #01b1d7;
+    text-align: center;
 	font-size: 40px;
 	font-weight: 400;
 	font-family: 'Questrial', sans-serif;
@@ -482,11 +494,13 @@ Responsive media queries
 #main-portfolio{
     margin-top: 75px;
     text-align: center;
+    height: 100vh;
 }
 
 #main-portfolio h1{
     font-family: 'Josefin Sans', sans-serif;
     margin-bottom: 50px;
+    padding-top: 75px;
 }
 .home h1{
     text-align: center;
