--- a/public/css/Portfolio/css/style.css
+++ b/public/css/Portfolio/css/style.css
@@ -42,8 +42,8 @@ Responsive media queries
 ************************************
 ***********************************/
 .header {
-    /*background: url('/img/portfolio/Home.jpg') no-repeat fixed;*/
-    background-color: black;
+    background: url('/images/home/bg-mobile.jpg') no-repeat fixed;
+    /*background-color: black;*/
     background-size: cover;
     min-height: 630px;
     position: relative;
@@ -493,8 +493,6 @@ Responsive media queries
 }
 
 #main-portfolio{
-    margin-top: 75px;
-    text-align: center;
     height: 100vh;
 }
 
